style.css
* {
  font-family: "Poppins", sans-serif;
}

body {
  position: absolute;
  width: 375px;
  height: 718px;
  background: #fff;
}

a {
  text-decoration: none;
}

header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin-top: 58px;
  margin-bottom: 5px;
  margin-left: 24px;
  margin-right: 24px;
}

#my-logo {
  position: static;
  width: 76px;
  height: 20px;
  left: 12px;
  top: 10px;
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 18px;
  line-height: 20px;
  display: flex;
  align-items: center;
  text-align: center;
  color: #6070ff;
  flex: none;
  order: 0;
  flex-grow: 0;
}

#my-logo:hover {
  opacity: 0.7;
}

#hamburger-menu {
  width: 20px;
  height: 20px;
  color: #acb7c3;
}

#hamburger-menu:hover {
  opacity: 0.7;
}

.fa-bars {
  color: #6070ff;
}

#front-section {
  background-image: url("./utils/header-shapesmobile@2x.svg");
  background-repeat: no-repeat;
}

#first-subsection {
  position: relative;
  width: 327px;
  height: 100px;
  top: 144px;
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 40px;
  line-height: 52px;
  display: flex;
  align-items: center;
  color: #172b4d;
  flex: none;
  order: 0;
  flex-grow: 0;
  margin: 12px 20px;
}

#second-subsection {
  position: relative;
  width: 327px;
  height: 146px;
  top: 176px;
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 24px;
  color: #344563;
  flex: none;
  order: 1;
  flex-grow: 0;
  margin: 12px 20px;
}

.link {
  position: relative;
  top: 176px;
}

.connect {
  position: static;
  width: 130px;
  height: 24px;
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  color: #7f8cff;
  margin-left: 20px;
  margin-right: 20px;
}

.connect:hover {
  opacity: 0.7;
}

.social-media {
  position: relative;
  top: 176px;
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: inline-block;
}

ul {
  list-style-type: none;
  padding-inline-start: 2px;
}

li {
  float: left;
  align-content: center;
}

li a {
  display: block;
  color: white;
  text-align: center;
  padding: 15px;
  text-decoration: none;
}

li a:hover {
  opacity: 0.7;
}

#works {
  display: grid;
  margin-top: 110px;
}

.cards {
  display: flex;
  flex-direction: column;
  padding: 16px;
  width: 327px;
  height: 552px;
  background: #fff;
  border: 1px solid #dfe1e6;
  box-sizing: border-box;
  border-radius: 16px;
  margin: 40px 12px;
}

#first-card-item {
  margin-top: 150px;
}

#snapshot1 {
  width: 295px;
  height: 230px;
  left: 16px;
  top: 16px;
  background: url("./utils/first-card.png");
  border-radius: 8px;
  margin: auto;
  background-size: cover;
}

.card-heading {
  width: 295px;
  height: 36px;
  font-style: normal;
  font-weight: bold;
  font-size: 32px;
  line-height: 44px;
  color: #172b4d;
  margin-top: 12px;
  margin-bottom: 12px;
}

.card-list {
  display: flex;
  justify-content: space-between;
  margin-right: 30px;
}

.item {
  margin-top: 5px;
}

.client {
  font-style: normal;
  font-weight: 600;
  font-size: 13px;
  color: #344563;
}

.role {
  font-style: normal;
  font-weight: 600;
  font-size: 13px;
  color: #7a869a;
}

.year {
  font-style: normal;
  font-weight: 600;
  font-size: 13px;
  color: #7a869a;
}

.card-main {
  font-style: normal;
  font-weight: normal;
  font-size: 15px;
  line-height: 24px;
  color: #344563;
  order: 1;
  margin-top: 12px;
  margin-bottom: 12px;
}

.language-list {
  display: flex;
  justify-content: flex-start;
  padding-inline-start: 2px;
}

.language-container {
  float: left;
  justify-content: center;
  align-content: center;
  padding: 5px 12px;
  background: #ebebff;
  border-radius: 8px;
  margin-right: 10px;
}

.language-text {
  font-size: 12px;
  letter-spacing: 0.03em;
  color: #6070ff;
}

.card-footer {
  margin-top: 25px;
  margin-bottom: 25px;
}

.card-button {
  font-style: normal;
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
  display: flex;
  align-items: center;
  text-align: center;
  letter-spacing: 0.03em;
  color: #396df2;
  border: 1px solid #6070ff;
  box-sizing: border-box;
  border-radius: 8px;
  height: 48px;
  background-color: #fff;
}

.card-button:hover {
  background-color: whitesmoke;
}

#snapshot2 {
  width: 295px;
  height: 230px;
  left: 16px;
  top: 16px;
  background: url("./utils//card-image.png");
  border-radius: 8px;
  margin: auto;
  background-size: cover;
}

#snapshot3 {
  width: 295px;
  height: 220px;
  left: 16px;
  top: 16px;
  background: url("./utils/card-image-2.png");
  border-radius: 8px;
  background-size: cover;
}

#snapshot4 {
  position: static;
  width: 295px;
  height: 220px;
  left: 16px;
  top: 16px;
  background: url("./utils//card-image-3.png");
  border-radius: 8px;
  margin-top: 12px;
  margin-bottom: 12px;
  background-size: cover;
}

#about-me {
  background-image: url("./utils/about-me-background.svg");
  margin-top: 60px;
}

.about-header {
  font-style: normal;
  font-weight: bold;
  font-size: 40px;
  line-height: 52px;
  align-items: center;
  color: #172b4d;
  margin: 24px 12px;
}

.about-text {
  margin-left: 12px;
  margin-right: 16px;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 24px;
  color: #344563;
}

#second-link {
  top: 20px;
}

#second-social-media {
  top: 20px;
}

#about-button {
  margin-left: 8px;
}

.base-list {
  display: flex;
  flex-direction: column;
  margin-left: 10px;
  margin-right: 20px;
}

.list-item {
  font-style: normal;
  font-weight: 500;
  font-size: 20px;
  line-height: 24px;
  display: flex;
  flex-direction: column;
  padding: 25px 5px;
  color: #000;
  border-bottom: 1px solid #dfe1e6;
}

#dropdown-menu {
  margin-top: 60px;
}

.list-item-inserted {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-right: 10px;
}

.fa-chevron-right {
  color: #acb7c3;
  font-size: 0.73em;
}

.language-list-container {
  display: flex;
  position: static;
  width: 303px;
  height: 66.72px;
  left: 12px;
  top: 12px;
  background: #f7f7f9;
  border-radius: 8px;
  margin-top: 12px;
  margin-bottom: 12px;
}

.language-item-logo {
  object-fit: cover;
  margin: 6px;
}

.language-item-text {
  margin-left: 8px;
}

.footer {
  background-image: url("./utils/Contact-me.png");
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-top: 100px;
}

.layer {
  background-image: url("./utils/contact-form-shapes-mobile.svg");
  position: absolute;
  width: 222px;
  height: 709.17px;
  left: 153px;
  top: 4452px;
}

.contact-me-header {
  font-style: normal;
  font-weight: bold;
  font-size: 40px;
  line-height: 52px;
  text-align: center;
  color: #fff;
}

.contact-me-first {
  margin-top: 90px;
}

.contact-me-text {
  font-style: normal;
  font-weight: normal;
  font-size: 20px;
  line-height: 28px;
  text-align: center;
  color: #ebebff;
  margin: 2px 20px;
  margin-bottom: 15px;
}

.form-list {
  display: flex;
  flex-direction: column;
}

.fname {
  background: #fff;
  border: 1px solid #cfd8dc;
  border-radius: 8px;
  padding: 15px 16px;
  font-style: normal;
  font-weight: normal;
  font-size: 17px;
  line-height: 20px;
  display: flex;
  align-items: center;
  color: #172b4d;
  margin-bottom: 13px;
  width: 300px;
}

#email-input {
  width: 300px;
}

textarea {
  background: #fff;
  border: 1px solid #cfd8dc;
  border-radius: 8px;
  font-style: normal;
  font-weight: normal;
  font-size: 15px;
  line-height: 24px;
  color: #b3bac5;
  width: 305px;
  height: 130px;
  padding: 12px;
}

.contact-me-button {
  width: 150px;
  border-style: none;
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 12px 16px;
  background: #fff;
  border-radius: 8px;
  font-style: normal;
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
  text-align: center;
  letter-spacing: 0.03em;
  color: #6070ff;
  margin-top: 15px;
  margin-bottom: 5px;
}

.contact-me-button:hover {
  opacity: 0.7;
}

.form-container {
  margin-top: 35px;
}

